# noodles

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  command_line_tutorial.md
noodles/: CHANGELOG.md  Cargo.toml
noodles-bam/: CHANGELOG.md  Cargo.toml
noodles-bam/benches/: record_encode.rs
noodles-bam/examples/: bam_add_tag_to_header.rs  bam_cat.rs  bam_count.rs  bam_count_async.rs  bam_depth.rs  bam_fastq.rs  bam_filter_data.rs  bam_filter_name.rs  bam_filter_read_name.rs  bam_flagstat.rs  bam_idxstats.rs  bam_idxstats_async.rs  bam_index.rs  bam_pileup.rs  bam_query.rs  bam_query_async.rs  bam_quickcheck.rs  bam_read_header.rs  bam_read_header_async.rs  bam_reheader.rs  bam_reheader_async.rs  bam_reset.rs  bam_split.rs  bam_view.rs  bam_view_async.rs  bam_view_multithread.rs  bam_write.rs  bam_write_async.rs
noodles-bam/src/: async.rs  bai.rs  cigar.rs  data.rs  flag.rs  fs.rs  indexed_reader.rs  io.rs  lazy.rs  lazy_record.rs  lib.rs  pileup.rs  quality.rs  reader.rs  reader2.rs  record.rs  record_ref.rs  reference.rs  sequence.rs  writer.rs
noodles-bcf/: CHANGELOG.md  Cargo.toml
noodles-bcf/examples/: bcf_count.rs  bcf_count_async.rs  bcf_index.rs  bcf_query.rs  bcf_query_async.rs  bcf_read_header.rs  bcf_read_header_async.rs  bcf_view.rs  bcf_view_async.rs  bcf_write.rs
noodles-bcf/src/: async.rs  fs.rs  header.rs  indexed_reader.rs  io.rs  lazy.rs  lib.rs  reader.rs  record.rs  writer.rs
noodles-bed/: CHANGELOG.md  Cargo.toml
noodles-bed/examples/: bed_count.rs  bed_index.rs  bed_query.rs  bed_view.rs  bed_write.rs
noodles-bed/src/: feature.rs  fs.rs  io.rs  lib.rs  reader.rs  record.rs  writer.rs
noodles-bgzf/: CHANGELOG.md  Cargo.toml
noodles-bgzf/examples/: bgzf_gzi_inspect.rs  bgzf_read.rs  bgzf_read_async.rs  bgzf_read_multithreaded.rs  bgzf_seek_uncompressed.rs  bgzf_write.rs  bgzf_write_async.rs  bgzf_write_multithreaded.rs
noodles-bgzf/src/: async.rs  block.rs  deflate.rs  fs.rs  gz.rs  gzi.rs  index.rs  indexed_reader.rs  io.rs  lib.rs  multithreaded_reader.rs  multithreaded_writer.rs  reader.rs  virtual_position.rs  writer.rs
noodles-core/: CHANGELOG.md  Cargo.toml
noodles-core/src/: error.rs  lib.rs  position.rs  region.rs
noodles-cram/: CHANGELOG.md  Cargo.toml
noodles-cram/examples/: cram_count.rs  cram_count_async.rs  cram_index.rs  cram_query.rs  cram_query_async.rs  cram_read_header.rs  cram_read_header_async.rs  cram_view.rs  cram_view_async.rs  cram_write.rs  cram_write_async.rs
noodles-cram/src/: async.rs  bit_reader.rs  bit_writer.rs  block.rs  codecs.rs  compression_header.rs  container.rs  crai.rs  data_container.rs  data_series.rs  encoding.rs  feature.rs  file_definition.rs  flags.rs  fs.rs  huffman.rs  indexed_reader.rs  indexer.rs  io.rs  lib.rs  num.rs  preservation_map.rs  rans.rs  reader.rs  record.rs  slice.rs  tag.rs  writer.rs
noodles-cram/tests/: reader_methods.rs  round_trip.rs
noodles-csi/: CHANGELOG.md  Cargo.toml
noodles-csi/examples/: csi_count.rs  csi_count_async.rs
noodles-csi/src/: async.rs  binning_index.rs  fs.rs  index.rs  io.rs  lib.rs  reader.rs  writer.rs
noodles-fasta/: CHANGELOG.md  Cargo.toml
noodles-fasta/benches/: indexed_reader.rs  reader.rs
noodles-fasta/examples/: bgzipped_indexed_fasta_query.rs  fasta_index.rs  fasta_query.rs  fasta_query_repository.rs  fasta_read.rs  fasta_write.rs
noodles-fasta/src/: async.rs  fai.rs  fs.rs  indexed_reader.rs  indexer.rs  io.rs  lib.rs  reader.rs  record.rs  repository.rs  sequence.rs  writer.rs
noodles-fastq/: CHANGELOG.md  Cargo.toml
noodles-fastq/benches/: reader.rs
noodles-fastq/examples/: fastq_count.rs  fastq_count_async.rs  fastq_index.rs  fastq_write.rs  fastq_write_async.rs
noodles-fastq/src/: async.rs  fai.rs  fs.rs  indexer.rs  io.rs  lib.rs  reader.rs  record.rs  writer.rs
noodles-fastx/: CHANGELOG.md  Cargo.toml  Readme.md
noodles-fastx/benches/: short_reads.rs
noodles-fastx/examples/: fastq2fasta.rs
noodles-fastx/src/: error.rs  lib.rs  reader.rs  record.rs  records.rs  writer.rs
noodles-gff/: CHANGELOG.md  Cargo.toml
noodles-gff/examples/: gff_count.rs  gff_count_async.rs  gff_query.rs  gff_view.rs  gff_write.rs
noodles-gff/src/: async.rs  attributes.rs  directive.rs  directive_buf.rs  feature.rs  io.rs  lazy.rs  lib.rs  line.rs  line_buf.rs  reader.rs  record.rs  record_buf.rs  strand.rs  writer.rs
noodles-gtf/: CHANGELOG.md  Cargo.toml
noodles-gtf/examples/: gtf_count.rs  gtf_query.rs  gtf_view.rs  gtf_write.rs
noodles-gtf/src/: io.rs  lib.rs  line.rs  line_buf.rs  reader.rs  record.rs  record_buf.rs  writer.rs
noodles-htsget/: CHANGELOG.md  Cargo.toml
noodles-htsget/examples/: htsget_download_reads.rs  htsget_download_variants.rs
noodles-htsget/src/: chunks.rs  class.rs  client.rs  format.rs  lib.rs  reads.rs  request.rs  response.rs  ticket.rs  variants.rs
noodles-refget/: CHANGELOG.md  Cargo.toml
noodles-refget/examples/: refget_download_sequence.rs  refget_sequence_metadata.rs  refget_service_info.rs
noodles-refget/src/: client.rs  lib.rs  sequence.rs
noodles-sam/: CHANGELOG.md  Cargo.toml
noodles-sam/examples/: sam_count.rs  sam_count_async.rs  sam_filter_data.rs  sam_index.rs  sam_query.rs  sam_query_async.rs  sam_read_header.rs  sam_read_header_async.rs  sam_reheader.rs  sam_reheader_async.rs  sam_view.rs  sam_view_async.rs  sam_write.rs  sam_write_async.rs
noodles-sam/src/: alignment.rs  alignment_reader.rs  alignment_record.rs  alignment_writer.rs  async.rs  cigar.rs  data.rs  flags.rs  fs.rs  header.rs  indexed_reader.rs  io.rs  lazy.rs  lib.rs  mapping_quality.rs  reader.rs  record.rs  record_ext.rs  writer.rs
noodles-tabix/: CHANGELOG.md  Cargo.toml
noodles-tabix/examples/: tabix_list_reference_sequence_names.rs  tabix_list_reference_sequence_names_async.rs  tabix_query_generic.rs  tabix_query_generic_async.rs  tabix_read_header.rs  tabix_read_header_async.rs  tabix_reheader.rs  tabix_write.rs
noodles-tabix/src/: async.rs  fs.rs  index.rs  (+4 more)
noodles-tutorial/: Cargo.toml
noodles-util/: CHANGELOG.md  Cargo.toml
noodles-vcf/: CHANGELOG.md  Cargo.toml
(+2236 files in other folders)
