[workspace]
members = [
  "noodles",
  "noodles-bam",
  "noodles-bcf",
  "noodles-bed",
  "noodles-bgzf",
  "noodles-core",
  "noodles-cram",
  "noodles-csi",
  "noodles-fasta",
  "noodles-fastq",
  "noodles-gff",
  "noodles-gtf",
  "noodles-htsget",
  "noodles-refget",
  "noodles-sam",
  "noodles-tabix",
  "noodles-util",
  "noodles-vcf",
]

[workspace.package]
license = "MIT"
edition = "2021"

[workspace.dependencies]
bit-vec = "0.6.1"
bitflags = "2.0.2"
byteorder = "1.2.3"
bytes = "1.0.1"
flate2 = "1.0.1"
futures = { version = "0.3.15", default-features = false }
indexmap = "1.4.0"
libdeflater = "0.14.0"
memchr = "2.3.3"
percent-encoding = "2.1.0"
tokio = "1.10.0"
