[workspace]
members = [
  "noodles",
  "noodles-bam",
  "noodles-bcf",
  "noodles-bed",
  "noodles-bgzf",
  "noodles-core",
  "noodles-cram",
  "noodles-csi",
  "noodles-fasta",
  "noodles-fastq",
  "noodles-gff",
  "noodles-gtf",
  "noodles-htsget",
  "noodles-refget",
  "noodles-sam",
  "noodles-tabix",
  "noodles-util",
  "noodles-vcf",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
rust-version = "1.70.0"

[workspace.dependencies]
bitflags = "2.0.2"
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
byteorder = "1.2.3"
bytes = "1.0.1"
flate2 = "1.0.1"
futures = { version = "0.3.15", default-features = false }
indexmap = "2.0.0"
lexical-core = "0.8.5"
libdeflater = "1.19.0"
memchr = "2.3.3"
percent-encoding = "2.1.0"
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = "1.10.0"
url = "2.2.2"
