[workspace]
members = [
  "noodles",
  "noodles-bam",
  "noodles-bcf",
  "noodles-bed",
  "noodles-bgzf",
  "noodles-core",
  "noodles-cram",
  "noodles-csi",
  "noodles-fasta",
  "noodles-fastq",
  "noodles-gff",
  "noodles-gtf",
  "noodles-htsget",
  "noodles-refget",
  "noodles-sam",
  "noodles-tabix",
  "noodles-util",
  "noodles-vcf",
]
resolver = "3"

[workspace.package]
license = "MIT"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
bitflags = "2.0.2"
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
bytes = "1.10.0"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-rs"] }
futures = { version = "0.3.15", default-features = false }
indexmap = "2.0.0"
lexical-core = "1.0.0"
libdeflater = "1.19.0"
memchr = "2.3.3"
percent-encoding = "2.1.0"
pin-project-lite = "0.2.6"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = "1.10.0"
url = "2.2.2"

[workspace.lints.rust]
missing_docs = "warn"
