[package]
name = "noodles-bam"
version = "0.24.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.62.0"
description = "Binary Alignment/Map (BAM) format reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-bam"

[features]
async = ["futures", "noodles-bgzf/async", "tokio"]

[dependencies]
bit-vec = "0.6.1"
byteorder = "1.2.3"
bytes = "1.0.1"
noodles-bgzf = { path = "../noodles-bgzf", version = "0.17.0" }
noodles-core = { path = "../noodles-core", version = "0.9.0" }
noodles-csi = { path = "../noodles-csi", version = "0.11.0" }
noodles-fasta = { path = "../noodles-fasta", version = "0.16.0" }
noodles-sam = { path = "../noodles-sam", version = "0.21.0" }

futures = { version = "0.3.15", optional = true, default-features = false, features = ["std"] }
tokio = { version = "1.10.0", optional = true, features = ["fs", "io-util"] }

[dev-dependencies]
noodles-sam = { path = "../noodles-sam", version = "0.21.0", features = ["async"] }
tokio = { version = "1.10.0", features = ["io-std", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "bam_count_async"
required-features = ["async"]

[[example]]
name = "bam_idxstats_async"
required-features = ["async"]

[[example]]
name = "bam_query_async"
required-features = ["async"]

[[example]]
name = "bam_read_header_async"
required-features = ["async"]

[[example]]
name = "bam_reheader_async"
required-features = ["async"]

[[example]]
name = "bam_view_async"
required-features = ["async"]

[[example]]
name = "bam_write_async"
required-features = ["async"]
