[package]
name = "noodles-bam"
version = "0.65.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Binary Alignment/Map (BAM) format reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-bam"

[features]
async = ["dep:futures", "dep:tokio", "noodles-bgzf/async"]

[dependencies]
bstr.workspace = true
byteorder.workspace = true
bytes.workspace = true
futures = { workspace = true, optional = true, features = ["std"] }
indexmap.workspace = true
tokio = { workspace = true, optional = true, features = ["fs", "io-util"] }

noodles-bgzf = { path = "../noodles-bgzf", version = "0.32.0" }
noodles-core = { path = "../noodles-core", version = "0.15.0" }
noodles-csi = { path = "../noodles-csi", version = "0.37.0" }
noodles-sam = { path = "../noodles-sam", version = "0.62.0" }

[dev-dependencies]
noodles-sam = { path = "../noodles-sam", version = "0.62.0", features = ["async"] }
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "bam_count_async"
required-features = ["async"]

[[example]]
name = "bam_idxstats_async"
required-features = ["async"]

[[example]]
name = "bam_query_async"
required-features = ["async"]

[[example]]
name = "bam_read_header_async"
required-features = ["async"]

[[example]]
name = "bam_reheader_async"
required-features = ["async"]

[[example]]
name = "bam_view_async"
required-features = ["async"]

[[example]]
name = "bam_write_async"
required-features = ["async"]
