[package]
name = "noodles-core"
version = "0.5.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.56.0"
description = "Shared utilities when working with noodles"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-core"

[dependencies]
noodles-sam = { path = "../noodles-sam", version = "0.13.0" }
