[package]
name = "noodles-core"
version = "0.9.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.57.0"
description = "Shared utilities when working with noodles"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-core"
