[package]
name = "noodles-cram"
version = "0.90.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CRAM format reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-cram"
categories = ["parser-implementations", "science::bioinformatics"]

[features]
async = ["dep:async-compression", "dep:futures", "dep:pin-project-lite", "dep:tokio"]
libdeflate = ["dep:libdeflater"]
parallel = ["dep:rayon"]

[dependencies]
bitflags.workspace = true
bstr.workspace = true
bzip2 = "0.6.0"
flate2.workspace = true
indexmap.workspace = true
lexical-core.workspace = true
lzma-rust2 = { version = "0.16.1", default-features = false, features = ["encoder", "std", "xz"] }
md-5 = "0.10.0"
noodles-bam = { path = "../noodles-bam", version = "0.86.0" }
noodles-core = { path = "../noodles-core", version = "0.19.0" }
noodles-fasta = { path = "../noodles-fasta", version = "0.60.0" }
noodles-sam = { path = "../noodles-sam", version = "0.82.0" }

async-compression = { version = "0.4.0", optional = true, features = ["gzip", "tokio"] }
futures = { workspace = true, optional = true, features = ["std"] }
pin-project-lite = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["fs", "io-util"] }

libdeflater = { workspace = true, optional = true }

rayon = { version = "1.10", optional = true }

[dev-dependencies]
noodles-sam = { path = "../noodles-sam", version = "0.82.0", features = ["async"] }
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["async", "parallel"]

[[example]]
name = "cram_count_async"
required-features = ["async"]

[[example]]
name = "cram_query_async"
required-features = ["async"]

[[example]]
name = "cram_read_header_async"
required-features = ["async"]

[[example]]
name = "cram_view_async"
required-features = ["async"]

[[example]]
name = "cram_write_async"
required-features = ["async"]
