[package]
name = "noodles-csi"
version = "0.30.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Coordinate-sorted index (CSI) format reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-csi"

[features]
async = ["dep:tokio", "noodles-bgzf/async"]

[dependencies]
bit-vec.workspace = true
byteorder.workspace = true
indexmap.workspace = true
noodles-bgzf = { path = "../noodles-bgzf", version = "0.26.0" }
noodles-core = { path = "../noodles-core", version = "0.14.0" }

tokio = { workspace = true, optional = true, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "csi_count_async"
required-features = ["async"]
