[package]
name = "noodles-csi"
version = "0.45.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Coordinate-sorted index (CSI) format reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-csi"
categories = ["parser-implementations", "science::bioinformatics"]

[features]
async = ["dep:tokio", "noodles-bgzf/async"]

[dependencies]
bstr.workspace = true
bit-vec = "0.8.0"
byteorder.workspace = true
indexmap.workspace = true
noodles-bgzf = { path = "../noodles-bgzf", version = "0.37.0" }
noodles-core = { path = "../noodles-core", version = "0.17.0" }

tokio = { workspace = true, optional = true, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "csi_count_async"
required-features = ["async"]
