[package]
name = "noodles-fastq"
version = "0.4.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.56.0"
description = "FASTQ format reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-fastq"

[features]
async = ["futures", "tokio"]

[dependencies]
futures = { version = "0.3.15", optional = true, default-features = false, features = ["std"] }
tokio = { version = "1.10.0", optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.10.0", features = ["fs", "io-std", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["async"]
