[package]
name = "noodles-fastq"
version = "0.7.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version = "1.64.0"
description = "FASTQ format reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-fastq"

[features]
async = ["dep:futures", "dep:tokio"]

[dependencies]
futures = { workspace = true, optional = true, features = ["std"] }
memchr.workspace = true
tokio = { workspace = true, optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "io-std", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "fastq_count_async"
required-features = ["async"]

[[example]]
name = "fastq_write_async"
required-features = ["async"]
