[package]
name = "noodles-gff"
version = "0.42.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generic Feature Format (GFF) reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-gff"

[features]
async = ["dep:futures", "dep:tokio"]

[dependencies]
indexmap.workspace = true
noodles-bgzf = { path = "../noodles-bgzf", version = "0.35.0" }
noodles-core = { path = "../noodles-core", version = "0.16.0" }
noodles-csi = { path = "../noodles-csi", version = "0.42.0" }
percent-encoding.workspace = true

futures = { workspace = true, optional = true, features = ["std"] }
tokio = { workspace = true, optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "gff_count_async"
required-features = ["async"]
