[package]
name = "noodles-gtf"
version = "0.41.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Gene Transfer Format (GTF) reader and writer"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-gtf"
categories = ["parser-implementations", "science::bioinformatics"]

[dependencies]
indexmap.workspace = true
noodles-bgzf = { path = "../noodles-bgzf", version = "0.37.0" }
noodles-core = { path = "../noodles-core", version = "0.17.0" }
noodles-csi = { path = "../noodles-csi", version = "0.45.0" }
noodles-gff = { path = "../noodles-gff", version = "0.46.0" }

[lints]
workspace = true
