[package]
name = "noodles-htsget"
version = "0.2.0"
authors = ["Michael Macias <zaeleus@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version = "1.64.0"
description = "An htsget client"
homepage = "https://github.com/zaeleus/noodles"
repository = "https://github.com/zaeleus/noodles"
documentation = "https://docs.rs/noodles-htsget"

[dependencies]
base64 = "0.21.0"
bytes.workspace = true
futures = { workspace = true, features = ["std"] }
noodles-core = { path = "../noodles-core", version = "0.12.0" }
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
serde_test = "1.0.137"
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
